--- a/404.html
+++ b/404.html
@@ -6,4 +6,13 @@ sharing: false
 footer: true
 ---
 
-Whoops! Could not find that page.
+<h1>Whoops! Could not find that page.</h1>
+<p>
+Hi there, I recently migrated my blog to a new platform and may have broken
+a lot of links inadverdently.
+</p>
+<p>
+If you don't mind, please 
+<a href="https://github.com/Haacked/haacked.com/issues/new">log an issue</a> 
+with the URL you were trying to reach and where you found the URL. Thanks!
+</p>
