--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@ footer: true
 <h1>Whoops! Could not find that page.</h1>
 <p>
 Hi there, I recently migrated my blog to a new platform and may have broken
-a lot of links inadverdently.
+a lot of links inadvertently.
 </p>
 <p>
 If you don't mind, please 
