--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 #
 # You don't need to edit this file, it's empty on purpose.
-# Edit haacked-theme's home layout instead if you wanna make some changes
+# Edit haackbar's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 #
 layout: home
