Remove unnecessary type attribute

--- a/demos/KodersProfile.html
+++ b/demos/KodersProfile.html
@@ -26,7 +26,7 @@
 
 						
 <!-- {Begin Toolbar} -->
-<script type="text/javascript" src="http://www.koders.com/scripts/toolbar.js"></script>
+<script src="http://www.koders.com/scripts/toolbar.js"></script>
 <link href="http://www.koders.com/skins/koders/toptoolbar.css" type="text/css" rel="stylesheet" />
 
 <div class="topToolbar ttb_wider" style="width: 532px; z-index: 1; top: 0px; right: 0px;"
