--- a/demos/csrf-webform.html
+++ b/demos/csrf-webform.html
@@ -16,7 +16,7 @@
         <input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEWBwKp6PqZAQL39JCrCwKRqLjVCgKwm8yzAgKxm8yzAgKym8yzAgLQxL2YArR+rN3YLdRCtiVTt7Z6+FaB85Nc" />
 
     </form>
-    <script type="text/javascript">
+    <script>
         document.badform.submit();
     </script>
 </body>
